arreglar conexion storage

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -20,10 +20,10 @@ services:
       RUNDECK_PLUGIN_EXECUTIONFILESTORAGE_NAME: org.rundeck.amazon-s3
       RUNDECK_PLUGIN_EXECUTIONFILESTORAGE_S3_ENDPOINT: http://minio:9000/
       RUNDECK_PLUGIN_EXECUTIONFILESTORAGE_S3_BUCKET: rundeck
-      RUNDECK_PLUGIN_EXECUTIONFILESTORAGE_S3_REGION: us-east-2
+      RUNDECK_PLUGIN_EXECUTIONFILESTORAGE_S3_REGION: us-east-1
       RUNDECK_PLUGIN_EXECUTIONFILESTORAGE_S3_PATHSTYLE: "true"
-      AWS_ACCESS_KEY_ID: ${STORAGE_ACCESS_KEY_ID}
-      AWS_SECRET_KEY: ${STORAGE_SECRET_KEY}
+      RUNDECK_PLUGIN_EXECUTIONFILESTORAGE_S3_ACCESSKEY: ${STORAGE_ACCESS_KEY_ID}
+      RUNDECK_PLUGIN_EXECUTIONFILESTORAGE_S3_SECRETKEY: ${STORAGE_SECRET_KEY}
     volumes:
       - ./data/realm.properties:/home/rundeck/server/config/realm.properties
   mysql:
